--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "marked": "^15.0.12",
     "swiper": "^11.2.8",
     "vue": "^3.5.13"
   },
