--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "marked": "^15.0.12",
     "swiper": "^11.2.8",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-easy-lightbox": "^1.19.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
