--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "my-catalog-app",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "marked": "^15.0.12",
+    "@tailwindcss/vite": "^4.1.11",
+    "marked": "^16.0.0",
     "swiper": "^11.2.10",
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.0"
   }
